Agrego secciones principales

--- a/index.html
+++ b/index.html
@@ -8,22 +8,69 @@
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-50 text-gray-800">
 
-  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6">
+  <!-- HERO -->
+  <section class="bg-blue-600 text-white py-20 px-6 text-center">
     <h1 class="text-4xl font-bold mb-4">
       Clases Particulares de Medicina
     </h1>
-
     <p class="text-lg mb-6">
       Preparación universitaria personalizada
     </p>
-
     <a
-      href="#"
-      class="bg-blue-600 text-white px-6 py-3 rounded-xl"
+      href="#contacto"
+      class="bg-white text-blue-600 px-6 py-3 rounded-xl font-semibold"
     >
       Contactar
+    </a>
+  </section>
+
+  <!-- SOBRE -->
+  <section class="max-w-4xl mx-auto py-16 px-6">
+    <h2 class="text-2xl font-bold mb-4">Sobre la profesora</h2>
+    <p>
+      Profesora particular universitaria con experiencia preparando estudiantes
+      de medicina en materias clave de la carrera. Clases adaptadas al ritmo y
+      necesidades de cada alumno.
+    </p>
+  </section>
+
+  <!-- MATERIAS -->
+  <section class="bg-white py-16 px-6">
+    <div class="max-w-4xl mx-auto">
+      <h2 class="text-2xl font-bold mb-6">Materias que prepara</h2>
+      <ul class="list-disc list-inside space-y-2">
+        <li>Anatomía</li>
+        <li>Fisiología</li>
+        <li>Histología</li>
+        <li>Bioquímica</li>
+        <li>Otras materias básicas de la carrera</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- METODOLOGÍA -->
+  <section class="max-w-4xl mx-auto py-16 px-6">
+    <h2 class="text-2xl font-bold mb-4">Metodología de trabajo</h2>
+    <p>
+      Clases individuales o en grupos reducidos, con enfoque práctico,
+      explicación clara de los contenidos y preparación específica para
+      parciales y finales.
+    </p>
+  </section>
+
+  <!-- CONTACTO -->
+  <section id="contacto" class="bg-blue-50 py-16 px-6 text-center">
+    <h2 class="text-2xl font-bold mb-6">Contacto</h2>
+
+    <a
+      href="https://wa.me/5493512258420?text=Hola%20Ceci,%20quiero%20consultar%20por%20clases%20particulares"
+      target="_blank"
+      class="inline-block bg-green-500 text-white px-8 py-4 rounded-xl text-lg font-semibold"
+    >
+      Escribirme por WhatsApp
     </a>
   </section>
 
