--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <!-- HERO -->
   <section class="bg-blue-600 text-white py-20 px-6 text-center">
     <h1 class="text-4xl font-bold mb-4">
-      Clases Particulares de Medicina
+      Clases Particulares Universitarias de Medicina
     </h1>
     <p class="text-lg mb-6">
-      Preparación universitaria personalizada
+      Acompañamiento Académico Personalizado
     </p>
     <a
       href="#contacto"
@@ -29,24 +29,22 @@
 
   <!-- SOBRE -->
   <section class="max-w-4xl mx-auto py-16 px-6">
-    <h2 class="text-2xl font-bold mb-4">Sobre la profesora</h2>
+    <h2 class="text-2xl font-bold mb-4">Hola! Soy Cecilia.</h2>
     <p>
-      Profesora particular universitaria con experiencia preparando estudiantes
-      de medicina en materias clave de la carrera. Clases adaptadas al ritmo y
-      necesidades de cada alumno.
+      Soy profesora particular universitaria con 30 años de experiencia preparando estudiantes
+      de medicina. 
     </p>
   </section>
 
   <!-- MATERIAS -->
   <section class="bg-white py-16 px-6">
     <div class="max-w-4xl mx-auto">
-      <h2 class="text-2xl font-bold mb-6">Materias que prepara</h2>
+      <h2 class="text-2xl font-bold mb-6">Materias</h2>
       <ul class="list-disc list-inside space-y-2">
-        <li>Anatomía</li>
         <li>Fisiología</li>
-        <li>Histología</li>
+        <li>Farmacología</li>
+        <li>Biología Celular y Molecular</li>
         <li>Bioquímica</li>
-        <li>Otras materias básicas de la carrera</li>
       </ul>
     </div>
   </section>
@@ -56,8 +54,8 @@
     <h2 class="text-2xl font-bold mb-4">Metodología de trabajo</h2>
     <p>
       Clases individuales o en grupos reducidos, con enfoque práctico,
-      explicación clara de los contenidos y preparación específica para
-      parciales y finales.
+      explicación razonada de los contenidos y preparación específica para
+      parciales y finales. Abundante ejercitación tanto oral como escrita.
     </p>
   </section>
 
@@ -70,7 +68,8 @@
       target="_blank"
       class="inline-block bg-green-500 text-white px-8 py-4 rounded-xl text-lg font-semibold"
     >
-      Escribirme por WhatsApp
+      Si necesitás apoyo académico o querés más información sobre las clases,
+      podés contactarte directamente por WhatsApp.
     </a>
   </section>
 
