--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
       target="_blank"
       class="inline-block bg-green-500 text-white px-8 py-4 rounded-xl text-lg font-semibold"
     >
-      Si necesitás apoyo académico o querés más información sobre las clases,
-      podés contactarte directamente por WhatsApp.
+      Escribime!
     </a>
   </section>
 
