--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       Clases Particulares Universitarias de Medicina
     </h1>
     <p class="text-lg mb-6">
-      Acompañamiento Académico Personalizado
+      Acompañamiento académico personalizado
     </p>
     <a
       href="#contacto"
@@ -28,12 +28,28 @@
   </section>
 
   <!-- SOBRE -->
-  <section class="max-w-4xl mx-auto py-16 px-6">
-    <h2 class="text-2xl font-bold mb-4">Hola! Soy Cecilia.</h2>
-    <p>
-      Soy profesora particular universitaria con 30 años de experiencia preparando estudiantes
-      de medicina. 
-    </p>
+  <section class="max-w-5xl mx-auto py-16 px-6 grid md:grid-cols-2 gap-10 items-center">
+
+    <!-- Foto -->
+    <div class="flex justify-center">
+      <img
+        src="assets/img/cecilia.jpg"
+        alt="Cecilia, profesora particular de Medicina"
+        class="rounded-2xl shadow-lg w-72"
+      />
+    </div>
+
+    <!-- Texto -->
+    <div>
+      <h2 class="text-2xl font-bold mb-4">Hola, soy Cecilia</h2>
+      <p>
+        Soy profesora particular universitaria con más de 30 años de experiencia
+        preparando estudiantes de Medicina. Acompaño a mis alumnos a lo largo de
+        su formación académica, ayudándolos a comprender en profundidad los contenidos
+        y a mejorar su rendimiento en parciales y finales.
+      </p>
+    </div>
+
   </section>
 
   <!-- MATERIAS -->
@@ -53,22 +69,53 @@
   <section class="max-w-4xl mx-auto py-16 px-6">
     <h2 class="text-2xl font-bold mb-4">Metodología de trabajo</h2>
     <p>
-      Clases individuales o en grupos reducidos, con enfoque práctico,
-      explicación razonada de los contenidos y preparación específica para
-      parciales y finales. Abundante ejercitación tanto oral como escrita.
+      Clases individuales o en grupos reducidos, con un enfoque práctico y
+      explicación razonada de los contenidos. La preparación se orienta
+      específicamente a parciales y finales, con abundante ejercitación
+      tanto oral como escrita.
     </p>
+  </section>
+
+  <!-- RESEÑAS -->
+  <section class="bg-white py-16 px-6">
+    <div class="max-w-5xl mx-auto">
+      <h2 class="text-2xl font-bold mb-10 text-center">
+        Opiniones de alumnos
+      </h2>
+
+      <div class="grid md:grid-cols-3 gap-6">
+        <img src="assets/img/resena1.jpg" alt="Reseña alumno" class="rounded-xl shadow-md" />
+        <img src="assets/img/resena2.jpg" alt="Reseña alumno" class="rounded-xl shadow-md" />
+        <img src="assets/img/resena3.jpg" alt="Reseña alumno" class="rounded-xl shadow-md" />
+      </div>
+
+      <div class="text-center mt-10">
+        <a
+          href="https://forms.gle/TU_LINK_DE_GOOGLE_FORM"
+          target="_blank"
+          class="inline-block bg-blue-600 text-white px-8 py-3 rounded-xl font-semibold"
+        >
+          Dejar mi reseña
+        </a>
+      </div>
+    </div>
   </section>
 
   <!-- CONTACTO -->
   <section id="contacto" class="bg-blue-50 py-16 px-6 text-center">
-    <h2 class="text-2xl font-bold mb-6">Contacto</h2>
+    <h2 class="text-2xl font-bold mb-4">Contacto</h2>
+
+    <p class="mb-6">
+      Para consultas sobre clases, horarios o disponibilidad,
+      podés escribirme directamente por WhatsApp.
+    </p>
 
     <a
       href="https://wa.me/5493512258420?text=Hola%20Ceci,%20quiero%20consultar%20por%20clases%20particulares"
       target="_blank"
       class="inline-block bg-green-500 text-white px-8 py-4 rounded-xl text-lg font-semibold"
     >
-      Escribime!
+      Escribime
     </a>
   </section>
 
