--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </section>
 
-  <!-- MATERIAS (MEJORADA) -->
+  <!-- MATERIAS -->
   <section class="bg-white py-20 px-6 reveal">
     <div class="max-w-6xl mx-auto">
       <h2 class="text-2xl font-bold mb-12 text-center">
@@ -65,34 +65,22 @@
 
         <div class="bg-blue-50 p-6 rounded-2xl text-center shadow-md transition hover:scale-105">
           <div class="text-4xl mb-4">🧠</div>
-          <h3 class="font-semibold text-lg mb-2">Fisiología</h3>
-          <p class="text-sm text-gray-600">
-            Comprensión integral del funcionamiento del cuerpo humano.
-          </p>
+          <h2 class="font-semibold text-lg mb-2">Fisiología</h2>
         </div>
 
         <div class="bg-blue-50 p-6 rounded-2xl text-center shadow-md transition hover:scale-105">
           <div class="text-4xl mb-4">💊</div>
-          <h3 class="font-semibold text-lg mb-2">Farmacología</h3>
-          <p class="text-sm text-gray-600">
-            Mecanismos de acción, efectos y usos clínicos.
-          </p>
+          <h2 class="font-semibold text-lg mb-2">Farmacología</h2>
         </div>
 
         <div class="bg-blue-50 p-6 rounded-2xl text-center shadow-md transition hover:scale-105">
           <div class="text-4xl mb-4">🧬</div>
-          <h3 class="font-semibold text-lg mb-2">Biología Celular</h3>
-          <p class="text-sm text-gray-600">
-            Bases moleculares y celulares de la vida.
-          </p>
+          <h2 class="font-semibold text-lg mb-2">Biología Celular</h2>
         </div>
 
         <div class="bg-blue-50 p-6 rounded-2xl text-center shadow-md transition hover:scale-105">
           <div class="text-4xl mb-4">⚗️</div>
-          <h3 class="font-semibold text-lg mb-2">Bioquímica</h3>
-          <p class="text-sm text-gray-600">
-            Procesos químicos esenciales para la función biológica.
-          </p>
+          <h2 class="font-semibold text-lg mb-2">Bioquímica</h2>
         </div>
 
       </div>
