--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="bg-blue-50 p-6 rounded-2xl text-center shadow-md transition hover:scale-105">
           <div class="text-4xl mb-4">🧬</div>
-          <h2 class="font-semibold text-lg mb-2">Biología Celular</h2>
+          <h2 class="font-semibold text-lg mb-2">Biología Celular y Molecular</h2>
         </div>
 
         <div class="bg-blue-50 p-6 rounded-2xl text-center shadow-md transition hover:scale-105">
