--- a/index.html
+++ b/index.html
@@ -139,18 +139,33 @@
     </div>
   </section>
 
-  <!-- CONTACTO -->
+   <!-- CONTACTO -->
   <section id="contacto" class="bg-blue-600 text-white py-16 px-6 text-center reveal">
     <h2 class="text-2xl font-bold mb-4">Contacto</h2>
-    <p class="mb-6">
-      Para consultas sobre clases, horarios o disponibilidad,
-      podés escribirme directamente por WhatsApp.
+    <p class="mb-10">
+      Podés contactarte por cualquiera de estos medios:
     </p>
-    <a href="https://wa.me/5493512258420?text=Hola%20Ceci,%20quiero%20consultar%20por%20clases%20particulares"
-      target="_blank"
-      class="inline-block bg-green-500 text-white px-8 py-4 rounded-xl text-lg font-semibold transition hover:scale-105 hover:shadow-lg">
-      Escribime
-    </a>
+
+    <div class="flex flex-col md:flex-row justify-center gap-6">
+
+      <a href="https://wa.me/5493512258420?text=Hola%20Ceci,%20quiero%20consultar%20por%20clases%20particulares"
+        target="_blank"
+        class="flex items-center justify-center gap-2 bg-green-500 px-8 py-4 rounded-xl font-semibold transition hover:scale-105 hover:shadow-lg">
+        🟢 WhatsApp
+      </a>
+
+      <a href="mailto:consultasprofececi@gmail.com"
+        class="flex items-center justify-center gap-2 bg-white text-blue-600 px-8 py-4 rounded-xl font-semibold transition hover:scale-105 hover:shadow-lg">
+        ✉️ Email
+      </a>
+
+      <a href="https://www.instagram.com/consultasprofececi/"
+        target="_blank"
+        class="flex items-center justify-center gap-2 bg-pink-500 px-8 py-4 rounded-xl font-semibold transition hover:scale-105 hover:shadow-lg">
+        📸 Instagram
+      </a>
+
+    </div>
   </section>
 
   <script>
