--- a/index.html
+++ b/index.html
@@ -154,10 +154,15 @@
         🟢 WhatsApp
       </a>
 
-      <a href="mailto:consultasprofececi@gmail.com"
-        class="flex items-center justify-center gap-2 bg-white text-blue-600 px-8 py-4 rounded-xl font-semibold transition hover:scale-105 hover:shadow-lg">
-        ✉️ Email
+      <a
+        href="https://mail.google.com/mail/?view=cm&fs=1&to=cecilia@gmail.com"
+        target="_blank"
+        class="flex items-center justify-center gap-2 bg-white text-blue-600 px-8 py-4 rounded-xl font-semibold transition hover:scale-105 hover:shadow-lg"
+      >
+        ✉️ Gmail
       </a>
+
+
 
       <a href="https://www.instagram.com/consultasprofececi/"
         target="_blank"
