--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </a>
 
       <a
-        href="https://mail.google.com/mail/?view=cm&fs=1&to=cecilia@gmail.com"
+        href="https://mail.google.com/mail/?view=cm&fs=1&to=consultasprofececi@gmail.com"
         target="_blank"
         class="flex items-center justify-center gap-2 bg-white text-blue-600 px-8 py-4 rounded-xl font-semibold transition hover:scale-105 hover:shadow-lg"
       >
