--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clases Particulares de Medicina</title>
+  <meta
+  name="description"
+  content="Clases particulares universitarias de Medicina. Preparación de Fisiología, Farmacología, Bioquímica y Biología Celular. Atención personalizada."
+  />
+
+  <title>Clases particulares de Medicina | Profesora universitaria con experiencia</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
 
