--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   name="description"
   content="Clases particulares universitarias de Medicina. Preparación de Fisiología, Farmacología, Bioquímica y Biología Celular. Atención personalizada."
   />
+  <meta name="google-site-verification" content="QQBDUkxs7igSZuFGlANzm5kGfCFRRP0vc801i-Ah990" /><meta name="google-site-verification" content="QQBDUkxs7igSZuFGlANzm5kGfCFRRP0vc801i-Ah990" />
 
   <title>Clases particulares de Medicina | Profesora universitaria con experiencia</title>
 
